# luabind-deboostified

./: CMakeLists.txt
src/: CMakeLists.txt  definitions.hpp  lua_include.hpp
src/implementation/: CMakeLists.txt  class.cpp  class_info.cpp  class_registry.cpp  class_rep.cpp  create_class.cpp  error.cpp  exception_handler.cpp  function.cpp  function_introspection.cpp  headertest.cpp  inheritance.cpp  link_compatibility.cpp  object_rep.cpp  open.cpp  operator.cpp  pcall.cpp  scope.cpp  set_package_preload.cpp  stack_content_by_name.cpp  weak_ref.cpp  wrapper_base.cpp
src/interface/: adopt_policy.cppm  back_reference.cppm  back_reference_fwd.cppm  class.cppm  class_info.cppm  config.cppm  container_policy.cppm  copy_policy.cppm  dependency_policy.cppm  discard_result_policy.cppm  error.cppm  error_callback_fun.cppm  exception_handler.cppm  from_stack.cppm  function.cppm  function_introspection.cppm  get_main_thread.cppm  handle.cppm  iterator_policy.cppm  lua_argument_proxy.cppm  lua_index_proxy.cppm  lua_iterator_proxy.cppm  lua_proxy.cppm  lua_proxy_interface.cppm  lua_state_fwd.cppm  luabind.cppm  make_function.cppm  make_function_signature.cppm  nil.cppm  no_dependency.cppm  object.cppm  open.cppm  operator.cppm  out_value_policy.cppm  pointer_traits.cppm  prefix.cppm  pseudo_traits.cppm  raw_policy.cppm  return_reference_to_policy.cppm  scope.cppm  (+7 more)
src/interface/detail/: call.cppm  call_function.cppm  call_member.cppm  call_shared.cppm  call_traits.cppm  class_registry.cppm  class_rep.cppm  constructor.cppm  conversion_storage.cppm  crtp_iterator.cppm  debug.cppm  decorate_type.cppm  deduce_signature.cppm  enum_maker.cppm  format_signature.cppm  garbage_collector.cppm  inheritance.cppm  instance_holder.cppm  link_compatibility.cppm  make_instance.cppm  meta.cppm  object.cppm  object_rep.cppm  open.cppm  operator_id.cppm  other.cppm  pcall.cppm  policy.cppm  primitives.cppm  property.cppm  push_to_lua.cppm  ref.cppm  signature_match.cppm  signature_types.cppm  stack_utils.cppm  type_info.cppm  type_traits.cppm
src/interface/detail/conversion_policies/: conversion_base.cppm  conversion_policies.cppm  enum_converter.cppm  function_converter.cppm  lua_proxy_converter.cppm  native_converter.cppm  pointer_converter.cppm  reference_converter.cppm  value_converter.cppm
test/: main.cpp
